# polymarket-event-trader

./: .gitignore  main.py  pyproject.toml
config/: bot.toml
src/: main.py
src/pm_bot/: locel_types.py
src/pm_bot/configuration/: bot_setup.py  config.py  factory.py  logger_config.py  runtime_config.py  selection.py  trading.py
src/pm_bot/consumers/execution/: bass.py  paper_execution.py  test.py
src/pm_bot/consumers/execution/utils/: account_interface.py  config.py
src/pm_bot/consumers/strategy/: base.py  default_random_strategy.py
src/pm_bot/pipeline/: engine.py  events.py  queue.py
src/pm_bot/producer/: base.py  websocket_feed.py
src/pm_bot/producer/utils/: websocket_normalizer.py
src/polymarket_interfaces/: README.md  README_WEBSOCKET_DE.md  __init__.py  clob_api.py  clob_market_api.py  clob_user_api.py  data_api.py  gamma_api.py
src/polymarket_interfaces/polymarket_websocket/: README.md  __init__.py  client.py  data_api.py  errors.py  models.py  orderbook.py  parser.py
src/polymarket_interfaces/utils/: api_common.py  utils.py
src/tests/: test_all_components.py  test_clob_api.py  test_clob_market_api.py  test_clob_user_api.py  test_data_api.py  test_runtime_config.py  test_setups.py
