[tool.pytest.ini_options]
# Fügt das 'src'-Verzeichnis zum Python-Pfad hinzu, damit pytest Module wie 'polymarket_interfaces' findet
pythonpath = ["src"]
testpaths = ["src/tests"]
python_files = ["test_*.py", "*_test.py"]

[project]
name = "polymarket-event-trader"
version = "0.1.0"
description = "Ein Paper- und Live-Trading-Bot für Polymarket-Events."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pytest>=7.0.0",
]
